--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ input[type="radio"].visually-hidden {
 
 .header-logo {
   position: absolute;
-  z-index: 100;
+  z-index: 20;
 
   display: block;
   width: 220px;
@@ -1625,7 +1625,7 @@ a.order-button:active {
   padding-right: 90px;  
 }
 
-.company-contacts a:first-of-type {
+.modal-map-activator {
   display: block;
   width: 300px;
   min-height: 158px;
@@ -1641,14 +1641,15 @@ a.order-button:active {
   background-color: #eeeae3;
 }
 
-.company-contacts a:first-of-type:hover img,
-.company-contacts a:first-of-type:focus img {  
-  -webkit-transform: scale(1.05);  
-      -ms-transform: scale(1.05);  
-          transform: scale(1.05);
+.modal-map-activator:hover img,
+.modal-map-activator:focus img {
+  -webkit-transform: scale(0.99);  
+      -ms-transform: scale(0.99);  
+          transform: scale(0.99);
+  transition: transform 0.5s ease;
 }
 
-.company-contacts .button {
+.modal-writeus-activator {
   width: 300px;
   padding-top: 11px;
   padding-bottom: 9px; 
@@ -1865,6 +1866,19 @@ a.order-button:active {
   display: block;
 }
 
+.modal-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 910;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: #000000;
+  opacity: 0.1;
+}
+
 .close-button {
   display: block;
   width: 21px;
@@ -1889,11 +1903,23 @@ a.order-button:active {
 }
 
 .modal-map {
-  top: 151px;
-  left: 50%;
-  z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 900;
 
   display: none;
+  width: 100%;
+  height: 100%;
+}
+
+.modal-map-content {
+  position: absolute;
+
+  top: 155px;
+  left: 50%;
+  z-index: 920;
+
   width: 970px;
   height: 467px;
   margin-left: -485px;
@@ -1907,11 +1933,23 @@ a.order-button:active {
 }
 
 .modal-write-us {
-  top: 338px;
-  left: 50%;
-  z-index: 5;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 900;
 
   display: none;
+  width: 100%;
+  height: 100%;
+}
+
+.modal-writeus-content {
+  position: absolute;
+
+  top: 338px;
+  left: 50%;
+  z-index: 920;
+
   width: 620px;
   height: 430px;
   padding: 47px 80px;  
@@ -1924,7 +1962,12 @@ a.order-button:active {
           box-shadow: 0px 20px 40px 0 rgba(0, 0, 0, 0.75);
 }
 
-.modal-close-button {
+.modal-map-active,
+.modal-writeus-active {
+  display: block;
+}
+
+.modal-writeus-close-button {
   position: absolute;
 
   top: 9px;
@@ -2672,11 +2715,21 @@ input[type="radio"]:checked:disabled + label::before {
 
 .modal-confirm {
   position: fixed;
-  top: 411px;
-  left: 50%;
-  z-index: 100;
+  top: 0;
+  left: 0;
+  z-index: 900;
 
   display: none;
+  width: 100%;
+  height: 100%;
+}
+
+.modal-confirm-content {
+  position: absolute;
+  top: 411px;
+  left: 50%;
+  z-index: 920;
+
   width: 620px;
   height: 282px;
   margin-left: -310px;
@@ -2687,6 +2740,17 @@ input[type="radio"]:checked:disabled + label::before {
   background-color: #ffffff;
   -webkit-box-shadow: 0px 20px 40px 0 rgba(0, 0, 0, 0.75);
           box-shadow: 0px 20px 40px 0 rgba(0, 0, 0, 0.75);
+}
+
+.modal-confirm-close-button {
+  position: absolute;
+
+  top: 9px;
+  right: 9px;
+}
+
+.modal-confirm-active {
+  display: block;
 }
 
 .modal-confirm span {
